don't use boxed primitive constructors
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/beanutils/trunk@1819245 13f79535-47bb-0310-9956-ffa450edef68