@@ -88,8 +88,8 @@ import org.apache.commons.beanutils.ConversionException;
  */
 public abstract class NumberConverter extends AbstractConverter {
 
-    private static final Integer ZERO = new Integer(0);
-    private static final Integer ONE  = new Integer(1);
+    private static final Integer ZERO = Integer.valueOf(0);
+    private static final Integer ONE  = Integer.valueOf(1);
 
     private String pattern;
     private final boolean allowDecimals;
@@ -249,12 +249,12 @@ public abstract class NumberConverter extends AbstractConverter {
 
         // Handle Date --> Long
         if (value instanceof Date && Long.class.equals(targetType)) {
-            return targetType.cast(new Long(((Date)value).getTime()));
+            return targetType.cast(Long.valueOf(((Date)value).getTime()));
         }
 
         // Handle Calendar --> Long
         if (value instanceof Calendar  && Long.class.equals(targetType)) {
-            return targetType.cast(new Long(((Calendar)value).getTime().getTime()));
+            return targetType.cast(Long.valueOf(((Calendar)value).getTime().getTime()));
         }
 
         // Convert all other types to String & handle
@@ -319,7 +319,7 @@ public abstract class NumberConverter extends AbstractConverter {
                 throw new ConversionException(toString(sourceType) + " value '" + value
                         + "' is too small " + toString(targetType));
             }
-            return targetType.cast(new Byte(value.byteValue()));
+            return targetType.cast(Byte.valueOf(value.byteValue()));
         }
 
         // Short
@@ -333,7 +333,7 @@ public abstract class NumberConverter extends AbstractConverter {
                 throw new ConversionException(toString(sourceType) + " value '" + value
                         + "' is too small " + toString(targetType));
             }
-            return targetType.cast(new Short(value.shortValue()));
+            return targetType.cast(Short.valueOf(value.shortValue()));
         }
 
         // Integer
@@ -347,12 +347,12 @@ public abstract class NumberConverter extends AbstractConverter {
                 throw new ConversionException(toString(sourceType) + " value '" + value
                         + "' is too small " + toString(targetType));
             }
-            return targetType.cast(new Integer(value.intValue()));
+            return targetType.cast(Integer.valueOf(value.intValue()));
         }
 
         // Long
         if (targetType.equals(Long.class)) {
-            return targetType.cast(new Long(value.longValue()));
+            return targetType.cast(Long.valueOf(value.longValue()));
         }
 
         // Float
@@ -361,12 +361,12 @@ public abstract class NumberConverter extends AbstractConverter {
                 throw new ConversionException(toString(sourceType) + " value '" + value
                         + "' is too large for " + toString(targetType));
             }
-            return targetType.cast(new Float(value.floatValue()));
+            return targetType.cast(Float.valueOf(value.floatValue()));
         }
 
         // Double
         if (targetType.equals(Double.class)) {
-            return targetType.cast(new Double(value.doubleValue()));
+            return targetType.cast(Double.valueOf(value.doubleValue()));
         }
 
         // BigDecimal
@@ -424,32 +424,32 @@ public abstract class NumberConverter extends AbstractConverter {
 
         // Byte
         if (targetType.equals(Byte.class)) {
-            return new Byte(value);
+            return Byte.valueOf(value);
         }
 
         // Short
         if (targetType.equals(Short.class)) {
-            return new Short(value);
+            return Short.valueOf(value);
         }
 
         // Integer
         if (targetType.equals(Integer.class)) {
-            return new Integer(value);
+            return Integer.valueOf(value);
         }
 
         // Long
         if (targetType.equals(Long.class)) {
-            return new Long(value);
+            return Long.valueOf(value);
         }
 
         // Float
         if (targetType.equals(Float.class)) {
-            return new Float(value);
+            return Float.valueOf(value);
         }
 
         // Double
         if (targetType.equals(Double.class)) {
-            return new Double(value);
+            return Double.valueOf(value);
         }
 
         // BigDecimal
