@@ -222,6 +222,6 @@ protected Object parse(final Object value, final String pattern) throws ParseExc
       if (posDouble != 0 && (posDouble < Float.MIN_VALUE || posDouble > Float.MAX_VALUE)) {
           throw new ConversionException("Supplied number is not of type Float: "+parsed);
       }
-      return new Float(parsed.floatValue()); // unlike superclass it returns Float type
+      return Float.valueOf(parsed.floatValue()); // unlike superclass it returns Float type
    }
 }
